fix: api key input form too short

--- a/static/base.css
+++ b/static/base.css
@@ -149,7 +149,6 @@ select {
     border-radius: 0.25rem;
     width: auto;
     box-shadow: none;
-    max-width: 25rem;
     transition: border-color 150ms ease;
 }
 
